static/styles/base.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

:root {
    --main-color: #261e48;
    --accent-color: #facf53;
    --background: #70e2ff;
    --btn-color: #7070e5;
    --btn-hover: #5d5dbf;
    --alt1: #2e2456;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Roboto';  
}

body {
    background-color: #8d85c1;
}

.divider {
    width: 100%;
    height: 1px;
    background-color: #000000;
    margin: 0 0 5px 0;
}

.mt-5 {
    margin-top: 5px;
}

a {
    text-decoration: none;
    color: var(--main-color);
}

a:hover {
    text-decoration: underline;
}

.link {
    color: var(--accent-color);
    text-decoration: none;
    cursor: pointer;
}

form {
    display: flex;
    flex-direction: column;
}

input {
    padding: 0.5rem;
    margin: 0.5rem 0;
    border-radius: 5px;
    border: 2px solid var(--accent-color);
    background-color: var(--alt1);
    color: var(--accent-color);
    width: 100%;
}

textarea {
    padding: 0.5rem;
    margin: 0.5rem 0;
    border-radius: 5px;
    border: 2px solid var(--accent-color);
    width: 100%;
    resize: vertical;
}

select {
    padding: 0.5rem;
    margin: 0.5rem 0;
    border: 2px solid var(--accent-color);
    border-radius: 5px;
    background-color: var(--alt1);
    color: var(--accent-color);
}

button {
    box-sizing: border-box;
    outline: none;
    border: none;
    background-color: var(--btn-color);
    color: #fff;
    cursor: pointer;
    margin-inline: auto;
    border-radius: 10px;
    padding: .5rem 1rem;
    font-size: 1rem;
    width: fit-content;
    transition: .1s ease-in-out;
    gap: .5rem;
}

button > svg {
    box-sizing: border-box;
    width: 1rem;
    height: 1rem;
    margin: 0 0 0 .5rem;
}

button:hover {
    background-color: var(--btn-hover);
}

button:active {
    transform: scale(0.95);
}

.delete {
    background-color: #dc3545;
}

.delete:hover {
    background-color: #c82333;
}

.popup {
    position: fixed;
    top: -16%;
    left: 40%;
    width: 20%;
    height: 15%;
    background-color: rgba(121, 121, 121, 0.75);
    border: 3px solid rgb(93, 93, 93);
    border-radius: 1vw;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    z-index: 1000;
    animation: pop 3.5s ease;
}

.popuptext {
    color: var(--main-color);
    text-align: center;
    justify-content: center;
    align-items: center;
    font-size: 1vw;
}

@keyframes pop {
    0%   {top: -50%;}
    25% {top: 1.5%;}
    30% {top: 0.5%;}
    35% {top: 1%;}
    50% {top: 1%; opacity: 1;}
    100% {display: none; top: 1%; opacity: 0;}
}

.fsuccess {
    background-color: rgba(0, 121, 24, 0.75);
    border: 3px solid rgb(0, 93, 19);
}

.ferror {
    background-color: rgba(121, 0, 0, 0.75);
    border: 3px solid rgb(93, 0, 0);
}

.ferror > span {
    color: var(--accent-color);
}

h1 {
    text-align: center;
    margin: 1rem 0;
    color: var(--main-color);
    font-size: 2.5rem;
}

.remove-tag {
    display: inline-flex;
    cursor: pointer;
    align-items: center;
    gap: .25rem;
    border-radius: 99999px;
    padding: .25rem .5rem;
    font-size: .875rem;
    font-weight: 600;
    line-height: 1;
    overflow: visible;
    width: auto;
}

.remove-tag:hover {
    text-decoration: underline;
}

.remove-tag > svg {
    box-sizing: border-box;
    width: 1rem;
    height: 1rem;
    flex-shrink: 0;
}

.add-tag {
    display: inline-flex;
    cursor: pointer;
    align-items: center;
    gap: .25rem;
    border-radius: 99999px;
    padding: .25rem .5rem;
    font-size: .875rem;
    font-weight: 600;
    line-height: 1;
    overflow: visible;
    width: auto;
}

.add-tag:hover {
    text-decoration: underline;
}

.add-tag > svg {
    box-sizing: border-box;
    width: 1rem;
    height: 1rem;
    flex-shrink: 0;
}

.tagform > button {
    margin-bottom: 5px;
}

.tagform > button > svg {
    margin: 0;
}

.display-tag {
    display: inline-flex;
    cursor: pointer;
    align-items: center;
    gap: .25rem;
    border-radius: 99999px;
    padding: .25rem .5rem;
    font-size: .875rem;
    font-weight: 600;
    line-height: 1;
    overflow: visible;
    width: auto;
    background-color: #4f4f4f;
    color: #fff;
}

.plussvg {
    transform: rotate(45deg);
}

.modal {
    display: none;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgb(0,0,0);
    background-color: rgba(0,0,0,0.4);
    justify-content: center;
    align-items: center;
}

.modal-content {
    background-color: #fefefe;
    padding: 20px;
    border: 1px solid #888;
    width: 80%;
}

.close {
    color: #aaa;
    float: right;
    font-size: 28px;
    font-weight: bold;
}

.close:hover,
.close:focus {
    color: black;
    text-decoration: none;
    cursor: pointer;
}

.iconified-input {
    display: flex;
    align-items: center;
    padding: 0.5rem;
    gap: .5rem;
    width: 100%;
    border-radius: 5px;
    border: 2px solid var(--accent-color);
    background-color: var(--alt1);
    color: #fff;
}

.iconified-input:focus-within {
    outline: auto 5px;
}

.iconified-input > input {
    margin: 0;
    padding: 0;
    border: 0;
    border-radius: 0;
    width: 100%;
    background-color: transparent;
    color: #fff;
}

.iconified-input::placeholder {
    color: #fff;
}

.iconified-input > input:focus {
    outline: none;
}

.section {
    display: flex;
    flex-direction: column;
    padding: 1rem;
    background-color: var(--main-color);
    border-radius: 20px;
    margin: 1rem;
    color: var(--accent-color);
}

.section-separator {
    display: flex;
    width: 100%;
    min-height: 80vh;
}

.section-stacker {
    width: 100%;
}

.editpass {
    display: flex;
    flex-direction: row;
    gap: 1rem;
    padding-bottom: .5rem;
}

.editpass > .iconified-input {
    flex-basis: min-content;
    flex-grow: 2;
    flex-shrink: 1;
}

.showpass {
    cursor: pointer;
}

.taglist {
    height: 1.5rem;
    margin: .25rem 0;
}

